--- a/.github/workflows/crowler.yml
+++ b/.github/workflows/crowler.yml
@@ -14,9 +14,15 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-
-      - name: Run Python file
-        run: python main.py
+      - name: Install dependencies
+        run: |
+          dir
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          python update.py
+          dir
+            - name: Run Python file
+              run: python main.py
 
       - name: Commit and push changes
         uses: ad-m/github-push-action@master
