--- a/.github/workflows/crowler.yml
+++ b/.github/workflows/crowler.yml
@@ -17,6 +17,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Run Python file
+        run: python main.py
       - name: Commit and push changes
         uses: ad-m/github-push-action@master
         with:
