--- a/.github/workflows/crowler.yml
+++ b/.github/workflows/crowler.yml
@@ -2,6 +2,7 @@ name: Generate and push data.json
 on:
  schedule:
     - cron: '0 7 * * *'
+    - cron: '0 13 * * *'
  workflow_dispatch:
 jobs:
  build:
